Split training and trasnfer learning into separate functions. Incorporate Luca's code (Model_James).

--- a/esn_feedback.ipynb
+++ b/esn_feedback.ipynb
@@ -356,145 +356,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "8b7cbfc3",
-      "metadata": {
-        "id": "8b7cbfc3"
-      },
-      "outputs": [],
-      "source": [
-        "class NN(nn.Module):\n",
-        "    \n",
-        "    def __init__(self,Ns,N_class):\n",
-        "        super().__init__()\n",
-        "        \n",
-        "        self.N_class=N_class\n",
-        "        N_layers=np.shape(Ns)[0]\n",
-        "        \n",
-        "        self.Ws=[]\n",
-        "        self.bs=[]\n",
-        "        \n",
-        "        self.Ths=[]\n",
-        "        self.Th_bs=[]\n",
-        "        \n",
-        "        MOD.Ns=Ns\n",
-        "        for n in range(1,np.shape(Ns)[0]):\n",
-        "        \n",
-        "            self.Ws.append(nn.Parameter(torch.randn([Ns[n-1],Ns[n]]).to(device)/torch.sqrt(torch.tensor(Ns[n-1]+Ns[n]))))\n",
-        "            self.bs.append(nn.Parameter(torch.zeros([Ns[n]]).to(device)))\n",
-        "\n",
-        "        \n",
-        "        self.Ths.append( nn.Parameter( torch.randn([Ns[-1],N_class])/torch.sqrt(torch.tensor(Ns[n-1]+Ns[n])) ) ) \n",
-        "        self.Th_bs.append( nn.Parameter(torch.zeros([N_class])) )\n",
-        "        \n",
-        "    def Initialise_Hyperparameters(self,eta_t, eta_o,batch_size,margin):\n",
-        "\n",
-        "\n",
-        "        self.eta_t=eta_t\n",
-        "        self.eta_o=eta_o\n",
-        "        self.batch_size=batch_size\n",
-        "\n",
-        "        self.opt=optim.Adam([{ 'params': self.Ws+self.bs, 'lr':eta_t }])\n",
-        "        \n",
-        "        self.opt_out=optim.Adam([{ 'params': self.Ths+self.Th_bs, 'lr':eta_o }])\n",
-        "                              \n",
-        "        self.margin=margin\n",
-        "        \n",
-        "        \n",
-        "    def Forward_Triplet(self, S):\n",
-        "        \n",
-        "        ys=[]\n",
-        "        ns = S.shape[1] # Number of samples\n",
-        "        ACC = 0.0\n",
-        "        o = torch.ones(9,1)\n",
-        "        for k in range(3):\n",
-        "        \n",
-        "            xs=[]\n",
-        "            xs.append(S[k,:,:])\n",
-        "\n",
-        "            for n in range(0,np.shape(MOD.Ns)[0]-2):\n",
-        "                # Compute activities in each layer\n",
-        "                xs.append(torch.relu( torch.add(torch.matmul(xs[n],self.Ws[n]),self.bs[n]) ) )\n",
-        "\n",
-        "            ys.append( torch.add(torch.matmul(xs[-1],self.Ws[-1]),self.bs[-1]) )\n",
-        "        \n",
-        "        # # Use Euclidean distance\n",
-        "        # dneg = torch.sum( torch.pow( ys[0].detach()-ys[2].detach(), 2 ), 1)\n",
-        "        # dposneg = torch.sum( torch.pow( ys[1].detach()-ys[2].detach(), 2 ), 1)\n",
-        "        # # Find the hard negative pairs and swap anchor and positive if dposneg>dneg\n",
-        "        # ind = dneg > dposneg\n",
-        "        # acopy = torch.clone(ys[0])\n",
-        "        # ys[0][ind,:] = torch.clone(ys[1][ind,:])\n",
-        "        # ys[1][ind,:] = torch.clone(acopy[ind,:])\n",
-        "        # Recompute distances\n",
-        "        dpos = torch.sum( torch.pow( ys[0]-ys[1], 2 ), 1)\n",
-        "        dneg = torch.sum( torch.pow( ys[0]-ys[2], 2 ), 1)\n",
-        "        \n",
-        "        E = dpos - dneg + self.margin\n",
-        "        E = torch.mean( E*(E>0) )\n",
-        "        if E>0:\n",
-        "            \n",
-        "            E.backward()\n",
-        "        \n",
-        "            self.opt.step()\n",
-        "            self.opt.zero_grad()\n",
-        "        \n",
-        "        # # Use correlation\n",
-        "        # a = (ys[0] - torch.matmul(torch.mean(ys[0],1,keepdim=True), torch.ones(1,ys[0].shape[1]))) / torch.matmul(torch.std(ys[0],1,keepdim=True), torch.ones(1,ys[0].shape[1]))\n",
-        "        # p = (ys[1] - torch.matmul(torch.mean(ys[1],1,keepdim=True), torch.ones(1,ys[0].shape[1]))) / torch.matmul(torch.std(ys[1],1,keepdim=True), torch.ones(1,ys[0].shape[1]))\n",
-        "        # n = (ys[2] - torch.matmul(torch.mean(ys[2],1,keepdim=True), torch.ones(1,ys[0].shape[1]))) / torch.matmul(torch.std(ys[2],1,keepdim=True), torch.ones(1,ys[0].shape[1]))\n",
-        "        # dpos = torch.sum( torch.mul(a,p) ,1) / a.shape[1]\n",
-        "        # dneg = torch.sum( torch.mul(a,n) ,1) / a.shape[1]\n",
-        "        # E = torch.mean(dneg - dpos)\n",
-        "        \n",
-        "        # E.backward()\n",
-        "    \n",
-        "        # self.opt.step()\n",
-        "        # self.opt.zero_grad()\n",
-        "\n",
-        "        # print(f'-----  Triplet loss = {torch.mean(E)},-----  +ve = {torch.mean(dpos)},------  -ve = {torch.mean(dneg)}')\n",
-        "        \n",
-        "        dn = torch.zeros(ns)\n",
-        "        for j in range(ns):            \n",
-        "            ind1 = torch.randperm(ns)\n",
-        "            dn = torch.sum(torch.pow(torch.matmul(o, ys[0][j,None,:]) - ys[2][ind1[0:9],:], 2.), 1)\n",
-        "            ACC += torch.any(dpos[j]*o > dn).logical_not().long()\n",
-        "        ACC /= ns\n",
-        "\n",
-        "        return E, ACC, torch.mean(dpos), torch.mean(dneg)\n",
-        "        \n",
-        "        \n",
-        "    def Forward_out(self, S, Y):\n",
-        "       \n",
-        "        \n",
-        "        xs=[]\n",
-        "        xs.append(S)\n",
-        "\n",
-        "        for n in range(0,np.shape(self.Ns)[0]-2): # For each layer except the final layer\n",
-        "            # Build up training data so that outputs learn from all previous layers\n",
-        "            xs.append(torch.relu( torch.add(torch.matmul(xs[n],self.Ws[n]),self.bs[n]) ) )\n",
-        "\n",
-        "        y= torch.add(torch.matmul(xs[-1],self.Ws[-1]),self.bs[-1])\n",
-        "        out=torch.add(torch.matmul(y.detach(),self.Ths[0]),self.Th_bs[0]) \n",
-        "        \n",
-        "        E_out=torch.mean(torch.sum( torch.pow( out-Y, 2 ), 1))\n",
-        "        \n",
-        "        Acc=torch.mean(torch.eq( torch.argmax(out,1), torch.argmax(Y,1) ).type(torch.float))\n",
-        "        \n",
-        "        E_out.backward()\n",
-        "        \n",
-        "        self.opt_out.step()\n",
-        "        self.opt_out.zero_grad()\n",
-        "        \n",
-        "        \n",
-        "        return E_out, Acc\n",
-        "        \n",
-        "        \n",
-        "    "
-      ]
-    },
-    {
       "cell_type": "markdown",
       "id": "85bd1a87",
       "metadata": {},
@@ -519,10 +380,8 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "H-p_rD-i5OWR",
-      "metadata": {
-        "id": "H-p_rD-i5OWR"
-      },
+      "id": "fc6708d7",
+      "metadata": {},
       "outputs": [],
       "source": [
         "class MLPclassic(nn.Module):\n",
@@ -544,9 +403,7 @@
         "        self.N_av = par.N_av\n",
         "        self.N_i = par.nInputs\n",
         "        self.gamma = par.gamma\n",
-        "        self.tranFromLayer = par.tranFromLayer\n",
         "        self.lossLayer = len(par.Ns)-1\n",
-        "        self.forwardToLayer = len(par.Ns)-1\n",
         "        self.etaInitial = par.etaInitial\n",
         "        self.etaTransfer = par.etaTransfer\n",
         "        \n",
@@ -592,13 +449,13 @@
         "\n",
         "    def transferOptimiser(self):\n",
         "        \n",
-        "        self.tranOpt=optim.Adam([{ 'params': self.Ws[(self.tranFromLayer-1):]+self.bs[(self.tranFromLayer-1):], 'lr':self.etaTransfer }])\n",
+        "        self.tranOpt=optim.Adam([{ 'params': self.Ws+self.bs, 'lr':self.etaTransfer }])\n",
         "        \n",
         "    def Forward(self):\n",
         "\n",
-        "        for n in range(0,self.forwardToLayer): # For each layer\n",
+        "        for n in range(len(self.Ns)-1): # For each layer\n",
         "            # Build up training data so that outputs learn from all previous layers\n",
-        "            self.x[n+1] = torch.clone(torch.relu( torch.add(torch.matmul(self.x[n],self.Ws[n]),self.bs[n]) ))\n",
+        "            self.x[n+1] = torch.relu( torch.add(torch.matmul(self.x[n],self.Ws[n]),self.bs[n]) )\n",
         "\n",
         "    def Reset(self, nSamples):\n",
         "\n",
@@ -873,9 +730,9 @@
         "    with torch.no_grad():\n",
         "        for j in range(par.nClass):\n",
         "            MOD.response(X_tr[j])\n",
-        "            H_tr.append(MOD.x[par.tranFromLayer-1])\n",
+        "            H_tr.append(MOD.x[par.saveRepLayer])\n",
         "            MOD.response(X_val[j])\n",
-        "            H_val.append(MOD.x[par.tranFromLayer-1])\n",
+        "            H_val.append(MOD.x[par.saveRepLayer])\n",
         "    \n",
         "\n",
         "\n",
@@ -1560,6 +1417,7 @@
         "    inputs = torch.load(expDir + '/' + 'hResp'+str(rngSeed)+'.pt')\n",
         "    X_tr = inputs[0]\n",
         "    X_val = inputs[1]\n",
+        "    print(f'Shape of X_tr is {X_tr[0].shape}')\n",
         "\n",
         "    ### Other parameters\n",
         "    save_every = int(np.floor(par.nSaveMaxT / par.nWeightSave)) # Save weights every <> epochs, up to epoch nSaveMaxT\n",
@@ -1586,7 +1444,7 @@
         "    resp_saveind = 0\n",
         "    if par.saveFlag_RESP:\n",
         "        outRESP = []\n",
-        "        for layer in range(MOD.tranFromLayer,len(par.Ns)):\n",
+        "        for layer in range(len(par.Ns)):\n",
         "            if len(X_tr[0].shape) > 2:\n",
         "                outRESP.append(np.zeros((len(par.saveRespAtN)+1, par.nClass * par.nSaveSamples, par.Ns[layer], tMax))) \n",
         "            else:\n",
@@ -1613,8 +1471,8 @@
         "        #         s = X_tr[0][0:par.nSaveSamples,:]\n",
         "        #         for k in range(1,par.nClass):\n",
         "        #             s = torch.concat([s, X_tr[k][0:par.nSaveSamples,:]],0)\n",
-        "        #         resp = MOD.responseSave(s, range(par.tranFromLayer,len(par.Ns)))\n",
-        "        #         for li, l in enumerate(range(par.tranFromLayer,len(par.Ns))):\n",
+        "        #         resp = MOD.responseSave(s, range(len(par.Ns)))\n",
+        "        #         for li, l in enumerate(range(len(par.Ns))):\n",
         "        #             outRESP[li][resp_saveind,:,:,:] = resp[li].numpy()\n",
         "        #     resp_saveind += 1\n",
         "\n",
@@ -1629,7 +1487,13 @@
         "        # Get response to input\n",
         "        MOD.Reset(Im.shape[0])\n",
         "        MOD.x[0] = torch.clone(Im)\n",
-        "        MOD.Forward()\n",
+        "        try:\n",
+        "            MOD.Forward()\n",
+        "        except:\n",
+        "            print(f'Size of layer 0 activity: {MOD.x[0].shape}')\n",
+        "            for k in range(len(par.Ns)-1):\n",
+        "                print(f'Size of layer {k} activity: {MOD.x[k+1].shape}')\n",
+        "                print(f'Size of layer {k} weights: {MOD.Ws[k].shape}')\n",
         "        \n",
         "        # Compute training loss and accuracy\n",
         "        loss, accTrTa, accTrClCe = MOD.getLossAccuracy(backwardFlag=True, opt=MOD.tranOpt)\n",
@@ -1747,11 +1611,12 @@
         "importlib.reload(par)\n",
         "par.etaInitial = swLR\n",
         "par.etaTransfer = 0.001\n",
-        "par.fbLayer = 2\n",
+        "par.fbLayer = 1\n",
+        "par.saveRepLayer = 1\n",
         "par.saveFlag_FBWeights = True\n",
         "par.nEpochs = 5000\n",
         "par.reportTime = 250\n",
-        "par.Ns = [par.N_esn, 100, 100, 50, par.nClass] # No. neurons in each layer\n",
+        "par.Ns = [par.N_esn, 100, par.nClass] # No. neurons in each layer\n",
         "par.nSaveMaxT = par.nEpochs \n",
         "par.metricLossType = 'prototypicalLoss'\n",
         "expName = 'test'\n",
@@ -1760,12 +1625,10 @@
         "\n",
         "### Transfer learning\n",
         "par.nEpisodesOut = 1000\n",
-        "par.etaTransfer = 0.005\n",
-        "par.eta_tau = 5000.0\n",
-        "par.Ns = [100,50,par.nClass]\n",
+        "par.etaTransfer = 0.001\n",
+        "par.Ns = [100,par.nClass]\n",
         "par.nInputs = 100\n",
         "par.fbLayer = []\n",
-        "par.tranFromLayer = 0\n",
         "tran_esn_fb(expName, seed)"
       ]
     },
