Debugging: initial training works. Transfer learning doesn't

--- a/Model_James.ipynb
+++ b/Model_James.ipynb
@@ -251,37 +251,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "7e90c710",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor(nan) tensor(nan)\n",
-      "tensor(0.2679) tensor(0.3578)\n",
-      "tensor(0.1595) tensor(0.6690)\n",
-      "tensor(0.1243) tensor(0.7478)\n",
-      "tensor(0.0985) tensor(0.8300)\n",
-      "tensor(0.0766) tensor(0.8698)\n",
-      "tensor(0.0683) tensor(0.8906)\n",
-      "tensor(0.0559) tensor(0.9126)\n",
-      "tensor(0.0547) tensor(0.9072)\n",
-      "tensor(0.0516) tensor(0.9206)\n",
-      "tensor(0.0501) tensor(0.9204)\n",
-      "tensor(0.0474) tensor(0.9236)\n",
-      "tensor(0.0426) tensor(0.9348)\n",
-      "tensor(0.0485) tensor(0.9212)\n",
-      "tensor(0.0387) tensor(0.9426)\n",
-      "tensor(0.0377) tensor(0.9364)\n",
-      "tensor(0.0374) tensor(0.9448)\n",
-      "tensor(0.0322) tensor(0.9488)\n",
-      "tensor(0.0331) tensor(0.9514)\n",
-      "tensor(0.0368) tensor(0.9428)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "N_in=X_tr.size()[1]\n",
     "N=500\n",
@@ -296,7 +269,6 @@
     "eta=0.001\n",
     "NN.Initialize_Hyper(eta)\n",
     "N_train=5000\n",
-    "N_transfer=1000\n",
     "batch_size=50\n",
     "\n",
     "\n",
@@ -325,79 +297,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "4ff94ada",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_11150/1414183574.py:1: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
-      "  Ns_transfer=torch.tensor(Ns[-2:])\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor(nan) tensor(nan)\n",
-      "tensor(0.3736) tensor(0.4154)\n",
-      "tensor(0.1171) tensor(0.9520)\n",
-      "tensor(0.0708) tensor(0.9544)\n",
-      "tensor(0.0539) tensor(0.9518)\n",
-      "tensor(0.0442) tensor(0.9566)\n",
-      "tensor(0.0376) tensor(0.9598)\n",
-      "tensor(0.0343) tensor(0.9602)\n",
-      "tensor(0.0355) tensor(0.9530)\n",
-      "tensor(0.0328) tensor(0.9552)\n",
-      "tensor(0.0317) tensor(0.9558)\n",
-      "tensor(0.0301) tensor(0.9570)\n",
-      "tensor(0.0265) tensor(0.9624)\n",
-      "tensor(0.0280) tensor(0.9590)\n",
-      "tensor(0.0292) tensor(0.9558)\n",
-      "tensor(0.0252) tensor(0.9634)\n",
-      "tensor(0.0263) tensor(0.9590)\n",
-      "tensor(0.0233) tensor(0.9644)\n",
-      "tensor(0.0247) tensor(0.9614)\n",
-      "tensor(0.0261) tensor(0.9624)\n",
-      "tensor(0.0254) tensor(0.9602)\n",
-      "tensor(0.0232) tensor(0.9626)\n",
-      "tensor(0.0277) tensor(0.9584)\n",
-      "tensor(0.0258) tensor(0.9620)\n",
-      "tensor(0.0236) tensor(0.9630)\n",
-      "tensor(0.0272) tensor(0.9568)\n",
-      "tensor(0.0236) tensor(0.9624)\n",
-      "tensor(0.0258) tensor(0.9598)\n",
-      "tensor(0.0258) tensor(0.9610)\n",
-      "tensor(0.0234) tensor(0.9650)\n",
-      "tensor(0.0236) tensor(0.9638)\n",
-      "tensor(0.0228) tensor(0.9650)\n",
-      "tensor(0.0274) tensor(0.9576)\n",
-      "tensor(0.0255) tensor(0.9628)\n",
-      "tensor(0.0268) tensor(0.9602)\n",
-      "tensor(0.0221) tensor(0.9634)\n",
-      "tensor(0.0231) tensor(0.9636)\n",
-      "tensor(0.0219) tensor(0.9668)\n",
-      "tensor(0.0256) tensor(0.9590)\n",
-      "tensor(0.0239) tensor(0.9620)\n",
-      "tensor(0.0246) tensor(0.9616)\n",
-      "tensor(0.0226) tensor(0.9656)\n",
-      "tensor(0.0239) tensor(0.9594)\n",
-      "tensor(0.0264) tensor(0.9586)\n",
-      "tensor(0.0208) tensor(0.9676)\n",
-      "tensor(0.0249) tensor(0.9578)\n",
-      "tensor(0.0244) tensor(0.9584)\n",
-      "tensor(0.0259) tensor(0.9584)\n",
-      "tensor(0.0252) tensor(0.9612)\n",
-      "tensor(0.0259) tensor(0.9570)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "Ns_transfer=torch.tensor(Ns[-2:])\n",
+    "Ns_transfer=torch.clone(Ns[-2:])\n",
     "\n",
-    "N_transfer=5000\n",
+    "N_transfer=1000\n",
     "Err_t=torch.zeros([N_transfer])\n",
     "Acc_t=torch.zeros([N_transfer])\n",
     "\n",
@@ -405,7 +312,7 @@
     "NN.Set_Transfer(Ns_transfer,eta_transfer)\n",
     "\n",
     "\n",
-    "for n in range(N_train):\n",
+    "for n in range(N_transfer):\n",
     "    \n",
     "    rand_ind=np.random.randint(0,X_tr.size()[0],[batch_size])\n",
     "    X_b=X_tr[rand_ind,:,:]\n",
@@ -416,7 +323,7 @@
     "    Err_t[n]=err.detach().to('cpu')\n",
     "    Acc_t[n]=acc.detach().to('cpu')\n",
     "    \n",
-    "    if n%100==0:\n",
+    "    if n%250==0:\n",
     "        \n",
     "        print(torch.mean(Err_t[n-100:n]), torch.mean(Acc_t[n-100:n]))\n",
     "        "
