--- a/esn_feedback.ipynb
+++ b/esn_feedback.ipynb
@@ -1486,7 +1486,8 @@
         "\n",
         "        # Get response to input\n",
         "        MOD.Reset(Im.shape[0])\n",
-        "        MOD.x[0] = torch.clone(Im)\n",
+        "        with torch.no_grad():\n",
+        "            MOD.x[0] = torch.clone(Im)\n",
         "        try:\n",
         "            MOD.Forward()\n",
         "        except:\n",
@@ -1621,8 +1622,32 @@
         "par.metricLossType = 'prototypicalLoss'\n",
         "expName = 'test'\n",
         "xent_esn_fb(expName, seed)\n",
-        "# metric_esn_fb(expName, seed)\n",
+        "# metric_esn_fb(expName, seed)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "60fa9e9c",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "inputs = torch.load(directory+'/data/'+expName+'/hResp11117.pt')\n",
+        "X_tr = inputs[0]\n",
+        "X_val = inputs[1]\n",
+        "fig = pl.figure(figsize=tuple(np.array((20.,10.))/2.54)); ax = pl.axes()\n",
+        "ax.spines[['top','right']].set_visible(False)\n",
         "\n",
+        "pl.plot(X_tr[5][0::100,:].cpu().transpose(0,1)); pl.show()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "51e8063e",
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "### Transfer learning\n",
         "par.nEpisodesOut = 1000\n",
         "par.etaTransfer = 0.001\n",
@@ -2228,21 +2253,9 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "venv",
+      "display_name": "Python [conda env:venv] *",
       "language": "python",
-      "name": "python3"
-    },
-    "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.8.16"
+      "name": "conda-env-venv-py"
     }
   },
   "nbformat": 4,
