Start to align code with Luca's

--- a/esn_feedback.ipynb
+++ b/esn_feedback.ipynb
@@ -392,6 +392,7 @@
         "        self.N_class=par.nClass\n",
         "        self.batch_size = par.batch_size\n",
         "        self.nSampPerClassPerBatch = int(par.batch_size/par.nClass) # No. input samples per class, per batch\n",
+        "        self.lossfn = nn.BCEWithLogitsLoss()\n",
         "        # Setup target vector to compute Loss and Accuracy\n",
         "        self.target = torch.zeros(self.batch_size).long().to(device)\n",
         "        for j in range(1,self.N_class):\n",
@@ -439,7 +440,7 @@
         "        \n",
         "        if par.fbLayer:\n",
         "            self.fbLayer = par.fbLayer\n",
-        "            self.W_fb = nn.Parameter((torch.randn([self.Ns[self.fbLayer],self.N])/10**4).to(device))\n",
+        "            self.W_fb = nn.Parameter((torch.randn([self.Ns[self.fbLayer],self.N])/torch.sqrt(torch.tensor(self.Ns[self.fbLayer] + self.N))).to(device))\n",
         "\n",
         "    def initialOptimiser(self):\n",
         "        if hasattr(self,'fbLayer'):\n",
@@ -451,24 +452,34 @@
         "        \n",
         "        self.tranOpt=optim.Adam([{ 'params': self.Ws+self.bs, 'lr':self.etaTransfer }])\n",
         "        \n",
-        "    def Forward(self):\n",
+        "    def Forward(self, input, t):\n",
         "\n",
-        "        for n in range(len(self.Ns)-1): # For each layer\n",
+        "        if hasattr(self,'fbLayer'):\n",
+        "            self.x[0] = (1-self.alpha)*self.x[0]+self.alpha * \\\n",
+        "                torch.tanh(torch.matmul(input, self.W_in)+torch.matmul(self.x[0], self.W)+torch.matmul(self.xFB, self.W_fb))\n",
+        "        else:\n",
+        "            self.x[0] = (1-self.alpha)*self.x[0]+self.alpha * \\\n",
+        "                torch.tanh(torch.matmul(input, self.W_in)+torch.matmul(self.x[0], self.W))\n",
+        "\n",
+        "        for n in range(1,len(self.Ns)): # For each layer\n",
         "            # Build up training data so that outputs learn from all previous layers\n",
-        "            self.x[n+1] = torch.relu( torch.add(torch.matmul(self.x[n],self.Ws[n]),self.bs[n]) )\n",
+        "            self.x[n] = torch.relu( torch.add(torch.matmul(self.x[n-1],self.Ws[n-1]),self.bs[n-1]) )\n",
+        "            if n==self.fbLayer:\n",
+        "                self.xFB = torch.clone(self.x[n])\n",
         "\n",
         "    def Reset(self, nSamples):\n",
         "\n",
         "        self.x = []\n",
         "        for n in range(0,len(self.Ns)): # For each layer\n",
         "            self.x.append(torch.zeros(nSamples, self.Ns[n], requires_grad=True))\n",
+        "            if n==self.fbLayer:\n",
+        "                self.xFB = torch.clone(self.x[n])\n",
         "\n",
         "    def ESN_1step(self, s, t):\n",
         "        if t>0:\n",
         "            if hasattr(self,'fbLayer'):\n",
-        "                fb = torch.clone(self.x[self.fbLayer])\n",
         "                self.x[0] = torch.clone((1-self.alpha)*self.x[0]+self.alpha * \\\n",
-        "                    torch.tanh(torch.matmul(s, self.W_in)+torch.matmul(self.x[0], self.W)+torch.matmul(fb, self.W_fb)))\n",
+        "                    torch.tanh(torch.matmul(s, self.W_in)+torch.matmul(self.x[0], self.W)+torch.matmul(self.xFB, self.W_fb)))\n",
         "            else:\n",
         "                self.x[0] = torch.clone((1-self.alpha)*self.x[0]+self.alpha * \\\n",
         "                    torch.tanh(torch.matmul(s, self.W_in)+torch.matmul(self.x[0], self.W)))\n",
@@ -512,9 +523,9 @@
         "        accClCe = self.accuracyClassCentroid()\n",
         "\n",
         "        if backwardFlag:\n",
-        "            opt.zero_grad()\n",
         "            L.backward()\n",
         "            opt.step()\n",
+        "            opt.zero_grad()\n",
         "            \n",
         "        return L,accTa,accClCe\n",
         "    \n",
@@ -526,8 +537,8 @@
         "        self.Reset(N_samples)\n",
         "        \n",
         "        for t in range(T):\n",
-        "            self.ESN_1step(Input[:, :, t], t)\n",
-        "            self.Forward()\n",
+        "            # self.ESN_1step(Input[:, :, t], t)\n",
+        "            self.Forward(Input[:, :, t], t)\n",
         "    \n",
         "    def responseSave(self, Input,saveLayers=[]):\n",
         "\n",
@@ -650,6 +661,7 @@
         "        MOD.response(Im)\n",
         "        # Compute loss and accuracy\n",
         "        loss, accTrTa, accTrClCe = MOD.getLossAccuracy(backwardFlag=True, opt=MOD.iniOpt)\n",
+        "        MOD.iniOpt.zero_grad()\n",
         "\n",
         "        #####\n",
         "        ##### CHECKING FOR NANS\n",
@@ -687,7 +699,7 @@
         "                    # savDW[k][:,dw_saveind] = torch.divide(torch.histogram(dw[dw>0], dwEdges).hist, torch.numel(dw)).cpu().numpy()\n",
         "                    savDW[k][:,dw_saveind] = torch.histogram(dw[dw>0], dwEdges).hist.numpy()\n",
         "                dw_saveind += 1\n",
-        "\n",
+        "        \n",
         "        ### Validation data\n",
         "        with torch.no_grad():\n",
         "            # Prepare batch\n",
@@ -707,7 +719,8 @@
         "            L_val[0][n]=np.copy(np.array(loss.to('cpu').detach()))\n",
         "            A_valTa[0][n]=np.copy(np.array(accValTa.to('cpu').detach()))\n",
         "            A_valClCe[0][n]=np.copy(np.array(accValClCe.to('cpu').detach()))\n",
-        "\n",
+        "        MOD.iniOpt.zero_grad()\n",
+        "        \n",
         "        # Update learning rate\n",
         "        MOD.iniOpt.param_groups[0]['lr'] = par.etaInitial * np.exp(-float(n)/par.eta_tau)\n",
         "\n",
@@ -1514,16 +1527,15 @@
         "        outA_trClCe[n]=np.copy(np.array(accTrClCe.to('cpu').detach()))\n",
         "        \n",
         "        # Store weight changes for effective learning rate\n",
-        "        if par.saveFlag_DW and (n%save_every)<1:\n",
-        "            with torch.no_grad():\n",
+        "        with torch.no_grad():\n",
+        "            if par.saveFlag_DW and (n%save_every)<1:\n",
         "                # Save before weights\n",
         "                w1 = []\n",
         "                for k in range(len(par.Ns)-1):\n",
         "                    w1.append(torch.clone(MOD.Ws[k].data))\n",
         "                if par.fbLayer:\n",
         "                    w1.append(torch.clone(MOD.W_fb.data))\n",
-        "        if par.saveFlag_DW and ((n-1)%save_every)<1:\n",
-        "            with torch.no_grad():\n",
+        "            if par.saveFlag_DW and ((n-1)%save_every)<1:\n",
         "                # Save after weights\n",
         "                w2 = []\n",
         "                for k in range(len(par.Ns)-1):\n",
@@ -1638,7 +1650,9 @@
         "fig = pl.figure(figsize=tuple(np.array((20.,10.))/2.54)); ax = pl.axes()\n",
         "ax.spines[['top','right']].set_visible(False)\n",
         "\n",
-        "pl.plot(X_tr[5][0::100,:].cpu().transpose(0,1)); pl.show()"
+        "pl.plot(X_tr[3][0:10,:].cpu().transpose(0,1), c=[1,0,0])\n",
+        "pl.plot(X_tr[4][0:10,:].cpu().transpose(0,1), c=[0,0,1])\n",
+        "pl.show()"
       ]
     },
     {
@@ -2253,9 +2267,21 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python [conda env:venv] *",
+      "display_name": "venv",
       "language": "python",
-      "name": "conda-env-venv-py"
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.8.16"
     }
   },
   "nbformat": 4,
