--- a/Model_James.ipynb
+++ b/Model_James.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "import numpy as np\n",
     "import torch\n",
-    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.pyplot as pl\n",
     "import torchvision\n",
     "import torchvision.datasets as datasets\n",
     "from torch import nn\n",
@@ -293,6 +293,36 @@
     "\n",
     "\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d871f143",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with torch.no_grad():\n",
+    "    NN.Reset(X_tr)\n",
+    "    for t in range(28):\n",
+    "        NN.Forward(X_tr[:,:,t])\n",
+    "    X=torch.clone(NN.xs[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d6a72e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = pl.figure(figsize=tuple(np.array((20.,10.))/2.54)); ax = pl.axes()\n",
+    "ax.spines[['top','right']].set_visible(False)\n",
+    "ind=(torch.argmax(Y_tr[:,:,0], 1)==3).nonzero().squeeze()\n",
+    "pl.plot(X[ind[0:10],:].cpu().transpose(0,1), c=[1,0,0])\n",
+    "ind=(torch.argmax(Y_tr[:,:,0], 1)==4).nonzero().squeeze()\n",
+    "pl.plot(X[ind[0:10],:].cpu().transpose(0,1), c=[0,0,1])\n",
+    "pl.show()"
    ]
   },
   {
