Small updates to make transfer learning run.

--- a/esn_feedback_ana.ipynb
+++ b/esn_feedback_ana.ipynb
@@ -323,7 +323,7 @@
     "        # Load data and compute silhouette indeces\n",
     "\n",
     "        baseName = '/home/jb739/sheffield/proj/esn_feedback/data/'\n",
-    "        models = ('0', '1', '2')\n",
+    "        models = ('0', '1')\n",
     "        experiment = 'swLR'\n",
     "        si = np.zeros((len(models), 5))\n",
     "        for j, model in enumerate(models):\n",
@@ -351,9 +351,9 @@
     "        ax.spines[['top','right']].set_visible(False)\n",
     "        for j in range(si.shape[0]):\n",
     "            pl.scatter(j+np.random.uniform(-0.25,0.25,(si.shape[1],1)), si[j,:], c=col1, s=3, edgecolors='none')\n",
-    "        pl.errorbar(list(range(3)), mSI, yerr=sSI, fmt='o', color=col2, markersize=3, markeredgecolor='none')\n",
-    "        ax.xaxis.set_ticks(list(range(3))); ax.yaxis.set_ticks([0.1,0.4,0.7])\n",
-    "        ax.set_xlim(xmin=-0.5, xmax=2.5); ax.set_ylim(ymin=0.1, ymax=0.7)\n",
+    "        pl.errorbar(list(range(si.shape[0])), mSI, yerr=sSI, fmt='o', color=col2, markersize=3, markeredgecolor='none')\n",
+    "        ax.xaxis.set_ticks(list(range(si.shape[0]))); ax.yaxis.set_ticks([0.1,0.4,0.7])\n",
+    "        ax.set_xlim(xmin=-0.5, xmax=1.5); ax.set_ylim(ymin=0.0, ymax=0.6)\n",
     "        if kwa['saveFlag']:\n",
     "            mu.checkMakeDir(kwa['figDir'])\n",
     "            pl.savefig(kwa['figDir']+'/allSI'+kwa['prefix']+'_L'+str(kwa['layer'])+'_'+'.svg', format=\"svg\")\n",
@@ -377,12 +377,15 @@
     "                dwMode.append(np.ones((25))) # Init storage for dwMode\n",
     "                fileNames = gl.glob(dirName+'/dw*'); fileNames.sort() # Get run filenames\n",
     "                for k, fileName in enumerate(fileNames): # for all other completed runs\n",
+    "                    if k>1:\n",
+    "                        break\n",
     "                    if complete[j,k]>0:\n",
     "                        h = torch.load(fileName)[kwa['layer']]\n",
     "                        histogram[j] += h[:,kwa['time']]\n",
     "                        dwMode[j] = np.multiply(dwMode[j],dwEdges[np.argmax(h, axis=0)])\n",
     "                histogram[j] /= nRuns # Normalise by number of successful runs\n",
-    "                dwMode[j] = np.power(dwMode[j], float(1/nRuns)) # Geometric mean of learning rates\n",
+    "                # dwMode[j] = np.power(dwMode[j], float(1/nRuns)) # Geometric mean of learning rates\n",
+    "                dwMode[j] = np.power(dwMode[j], float(1/2.)) # Geometric mean of learning rates\n",
     "                fWeights.append(histogram[j].sum()/(par.Ns[kwa['layer']]*par.Ns[kwa['layer']+1])) # Fraction of weights that change\n",
     "            else:\n",
     "                # if no completed runs, append empty arrays\n",
@@ -413,9 +416,10 @@
     "        fig = pl.figure(figsize=tuple(np.array((2.,1.))/2.54)); ax = pl.axes()\n",
     "        ax.spines[['top','right']].set_visible(False)\n",
     "        for j, frac in enumerate(fWeights):\n",
-    "            if fWeights[j]>0.25:\n",
-    "                col = tuple(np.sqrt(colShade[j]**2 * col2 + colShade[nLR-1-j]**2 * col1)) # set colour for this learning rate\n",
-    "                pl.scatter(j, frac, s=3, color=col)\n",
+    "            if frac:\n",
+    "                if frac>0.25:\n",
+    "                    col = tuple(np.sqrt(colShade[j]**2 * col2 + colShade[nLR-1-j]**2 * col1)) # set colour for this learning rate\n",
+    "                    pl.scatter(j, frac, s=3, color=col)\n",
     "        ax.xaxis.set_ticks([]); ax.yaxis.set_ticks((0,1))\n",
     "        if kwa['saveFlag']:\n",
     "            mu.checkMakeDir(kwa['figDir'])\n",
@@ -427,8 +431,8 @@
     "        for j, mode in enumerate(dwMode):\n",
     "            if len(mode)>0:\n",
     "                col = tuple(np.sqrt(colShade[j]**2 * col2 + colShade[nLR-1-j]**2 * col1)) # set colour for this learning rate\n",
-    "                pl.plot(np.linspace(0,par.nEpochs,25), mode, linewidth=1.0, color=col)\n",
-    "        pl.yscale('log'); ax.yaxis.set_ticks([1e-7,1e-5,1e-3]); ax.yaxis.set_ticklabels(['$10^{-7}$','$10^{-5}$','$10^{-3}$']); ax.xaxis.set_ticks([0,5000]); ax.set_ylim(ymin=1e-7, ymax=dwEdges[-1])\n",
+    "                pl.plot(np.linspace(0,par.nEpisodes,25), mode, linewidth=1.0, color=col)\n",
+    "        pl.yscale('log'); ax.yaxis.set_ticks([1e-7,1e-5,1e-3]); ax.yaxis.set_ticklabels(['$10^{-7}$','$10^{-5}$','$10^{-3}$']); ax.xaxis.set_ticks([0,5000]); ax.set_ylim(ymin=1e-7, ymax=10*dwEdges[-1])\n",
     "        # ax.get_yaxis().set_major_formatter(mpl.ticker.ScalarFormatter())\n",
     "        if kwa['saveFlag']:\n",
     "            mu.checkMakeDir(kwa['figDir'])\n",
@@ -458,18 +462,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = 'out2FB2'\n",
+    "model = 'tran_proFB1'\n",
     "experiment = 'swLR'\n",
     "key = 'loadData'; dataName = 'accValTa'\n",
     "acc = esn_feedback_ana(key,modName=model,expName=experiment,dataName=dataName)\n",
     "\n",
     "# Concatenate runs for plotting\n",
+    "complete = torch.load('/home/jb739/sheffield/proj/esn_feedback/data/'+model+'_'+experiment+'_0/complete.pt') \n",
     "accpl = []\n",
     "for j in range(len(acc)):\n",
     "    accpl.append([])\n",
-    "    accpl[j] = np.zeros((acc[j][0][0].shape[0],len(acc[j])))\n",
-    "    for k in range(len(acc[j])):\n",
-    "        accpl[j][:,k] = acc[j][k][0]\n",
+    "    if (complete[j,:]>0).any():\n",
+    "        # accpl[j] = np.zeros((acc[j][0][0].shape[0],len(acc[j])))\n",
+    "        accpl[j] = np.zeros((acc[j][0].shape[0],len(acc[j])))\n",
+    "        for k in range(len(acc[j])):\n",
+    "            # accpl[j][:,k] = acc[j][k][0]\n",
+    "            accpl[j][:,k] = acc[j][k]\n",
     "\n",
     "key = 'plotAcc'; saveFlag = True; \n",
     "esn_feedback_ana(key,acc=accpl,saveFlag=saveFlag, figDir='./figs/swLR/', figName=dataName+'_'+model)\n",
@@ -558,7 +566,7 @@
    "outputs": [],
    "source": [
     "### Plot response examples\n",
-    "saveFlag=False; LR_index = 3; model = 'out2proFB2'; layer=1\n",
+    "saveFlag=True; LR_index = 2; model = 'proFB1'; layer=0\n",
     "# Load data\n",
     "experiment = 'swLR'; key = 'loadResp'; dataName = 'respSave11113'\n",
     "r = esn_feedback_ana(key,modName=model,expName=experiment,dataName=dataName,selectLR=LR_index,maxNSeeds=1,layer=layer)\n",
@@ -586,8 +594,8 @@
    "outputs": [],
    "source": [
     "### Plot results summary for all models\n",
-    "key = 'allSI'; layer = 1; prefix='proFB'\n",
-    "si = esn_feedback_ana(key, prefix=prefix, lr_index=4, layer=layer)\n",
+    "key = 'allSI'; layer = 0; prefix='proFB'\n",
+    "si = esn_feedback_ana(key, prefix=prefix, lr_index=2, layer=layer)\n",
     "key = 'plotAllSI'; figDir='./figs/swLR'\n",
     "esn_feedback_ana(key, si=si, figDir=figDir, layer=layer, prefix=prefix, saveFlag=True)\n",
     "print(si)\n"
@@ -644,8 +652,8 @@
    "outputs": [],
    "source": [
     "saveFlag = True\n",
-    "key = 'plotDW'; model = 'out2FB2'; experiment = 'swLR'\n",
-    "esn_feedback_ana(key, saveFlag=saveFlag, modName=model, expName=experiment, figDir='./figs/swLR/', layer=4, time=-1)"
+    "key = 'plotDW'; model = 'proFB0'; experiment = 'swLR'\n",
+    "esn_feedback_ana(key, saveFlag=saveFlag, modName=model, expName=experiment, figDir='./figs/swLR/', layer=0, time=-1)"
    ]
   }
  ],
